# Tu-154B2-CE

./: .gitignore  AviTab.json  CLAUDE.md  CONTRIBUTING.md  KLNconfig.txt  README.md  panels.txt  skunkcrafts_updater.cfg  skunkcrafts_updater_beta.cfg  smartcopilot.cfg  tu154.acf  tu154.acf~  tu154_prefs.txt  tu154_vrconfig.txt  version.mak
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.github/workflows/: build-stb-stitch.yml  create-release.yml  nightly-build.yml
airfoils/: NACA 0009 (symmetrical).afl  hstab.afl  hstab_orig.afl  vstab.afl  wing.afl  wing_mod.afl  wing_orig.afl  wing_tip.afl
black_box/: 02_01_00_000.bbox
fmod/: GUIDs.txt  Master Bank.strings.bank  tu154.snd
liveries/85554/: saved_state.ini
liveries/Aeroflot СССР-85565/: saved_state.ini
liveries/Air_Ukraine_85535/: saved_state.ini
liveries/Air_Ukraine_85535/objects/: salon2.pdn
objects/: azs_panels.objbak
objects/particles/: aircraft_particles.pss  aircraft_particles.pss_autosave  aircraft_particles.pss~
pa3/: UWUU.json  scroll_00.json
pa3/gen_plans/: USRR-UWUU2.json  UWUU-UUEE.json  fpln.json
plugins/KLN90B/data/modules/: main.lua  state.txt
plugins/KLN90B/data/output/: SASLLog.txt
plugins/kontur_fp_transfer/64/: win.xpl
plugins/sasl/: changelog.txt  version.txt
plugins/sasl/data/api/: api.lua
plugins/sasl/data/modules/3rd-modules/stb_stitch/: BUILD.md  CMakeLists.txt  mac.dylib  stb_image_write_lib.c
plugins/xtlua/: StackTracePlus.lua  init.lua
plugins/xtlua/64/: lin.xpl
sounds/contact/: roll_runway.wavbak
(+273 files in other folders)
